Fix menu overflow issue

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -212,9 +212,14 @@
 }
 
 body {
-  overflow-x: hidden;
   font-family: "Univers",sans-serif;
   color: #000;
+}
+
+body>div {
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
 }
 
 ul,
@@ -280,6 +285,7 @@ button {
   z-index: 99999999;
   max-height: calc(100vh - 50px);
   overflow: auto;
+  display: none;
 }
 
 .main-header {
@@ -2060,8 +2066,8 @@ p {
     background-color: #000;
     -webkit-transform: translateX(100%);
             transform: translateX(100%);
-    -webkit-transition: all .25s;
-    transition: all .25s;
+    -webkit-transition: all .75s;
+    transition: all .75s;
   }
 
   .open .main-header__menu-bar {
