--- a/src/scss/base/_setup.scss
+++ b/src/scss/base/_setup.scss
@@ -8,9 +8,14 @@
 }
 
 body {
-  overflow-x: hidden;
   font-family: $copyFF;
   color: $black;
+
+  > div {
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+  }
 }
 
 ul,ol {
@@ -74,5 +79,5 @@ button {
   z-index: 99999999;
   max-height: calc(100vh - 50px);
   overflow: auto;
-  // display: none;
+  display: none;
 }
