--- a/src/scss/structure/_header.scss
+++ b/src/scss/structure/_header.scss
@@ -67,7 +67,7 @@
       min-height: calc(100vh - #{$headerHMin});
       background-color: $black;
       transform: translateX(100%);
-      transition: all .25s;
+      transition: all .75s;
 
       .open & {
         transform: translateX(0);
